build: switch to src layout - Move millie package to src/ - Update pyproject.toml for src layout - Fix package discovery issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,10 @@ dev = [
     "pytest-cov>=6.0.0",
 ]
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["millie"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
