test: enhance test coverage for CLI commands
This commit improves test coverage and mocking for various CLI commands:
- Updated Docker command mocking with more flexible DockerCommandMock
- Refined test cases for Milvus, Attu, DB, and Migration CLI commands
- Added more comprehensive test scenarios and error handling checks
- Improved test fixtures and environment variable mocking

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ millie = "millie.cli:cli"
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
-    "pytest-cov>=6.0.0",
+    "pytest-cov>=6.0.0"
 ]
 
 [tool.pytest.ini_options]
