feat: enhance migration and schema management for Milvus collections
This commit introduces comprehensive improvements to migration and schema management:
- Updated migration generation to handle initial and subsequent schema changes
- Improved schema differ to detect more nuanced field modifications
- Enhanced migration builder to generate more robust migration files
- Added support for tracking schema history with version management
- Implemented more flexible schema representation and conversion
- Updated CLI commands to support new migration and schema workflows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,23 @@
             "module": "millie",
             "args": [
                 "migrate",
-                "create"
+                "create",
+                "vs_code_task"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}"
+            }
+        },
+        {
+            "name": "Millie: Seed Data",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "millie",
+            "args": [
+                "db",
+                "seed"
             ],
             "console": "integratedTerminal",
             "justMyCode": false,
