--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "docker>=7.0.0",
     "typeguard>=4.4.1",
     "rich>=13.7.1",
+    "openai>=1.6.1",
     "python-dotenv",
 ]
 classifiers = [
