--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
     "docker>=7.0.0",
     "typeguard>=4.4.1",
     "rich>=13.7.1",
-    "openai>=1.6.1",
     "python-dotenv",
 ]
 classifiers = [
@@ -40,6 +39,16 @@ millie = "millie.cli:main"
 dev = [
     "pytest>=8.0.0",
     "pytest-cov>=6.0.0"
+]
+openai = [
+    "openai>=1.6.1"
+]
+sentence-transformers = [
+    "sentence-transformers>=2.2.2"
+]
+all = [
+    "openai>=1.6.1",
+    "sentence-transformers>=2.2.2"
 ]
 
 [tool.pytest.ini_options]
